// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 generateAnotherConfig 函数 1`] = `
Object {
  "domain": "localhost2",
  "port": 8080,
  "server": "http://localhost",
  "time": Any<Date>,
}
`;

exports[`测试 generateConfig 函数 1`] = `
Object {
  "domain": "localhost",
  "id": Any<Number>,
  "port": 8080,
  "server": "http://localhost",
  "time": Any<Date>,
}
`;
